--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,15 @@
+.html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.body {
+    font-family: sans-serif;
+    display: flex;
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -10,6 +22,8 @@
 
 .logo {
     margin-bottom: 40px;
+    width: 390px;
+    height: 100px;
 }
 
 .search-box {
@@ -35,7 +49,7 @@
 }
 
 .link {
-    margin-top: 20px;
+    margin-top: 30px;
     font-size: 14px;
     color: #666;
     text-decoration: none;
