--- a/static/style.css
+++ b/static/style.css
@@ -26,7 +26,7 @@
     height: 50px;
 }
 
-.search-box {
+.input-box {
     width: 300px;
     height: 30px;
     padding: 10px;
@@ -37,7 +37,7 @@
     text-align: center;
 }
 
-.search-button {
+.submit-button {
     margin-top: 10px;
     padding: 8px 16px;
     border: none;
