--- a/static/style-backup.css
+++ b/static/style-backup.css
@@ -1,28 +1,21 @@
-html, body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
 body {
-    background-color: #ffffff;
-    display: flex;
-    font-size: 1em;
-    font-family: system-ui, sans-serif;
+    font-family: Arial, sans-serif;
+    font-size: 26px;
 }
 
 .container {
     display: flex;
-    margin: 0 auto;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
+    height: 100vh;
+    background-color: #ffffff;
+    font-family: Arial, sans-serif;
 }
 
 .logo {
-    margin-top: 20px;
-    width: 75%;
+    margin-top: 10px;
+    width: 600px;
 }
 
 .chatbox {
@@ -34,21 +27,20 @@ body {
 }
 
 input[type="text"] {
-    font-size: 1em;
+    font-size: 32px;
     border-radius: 50px;
     width: 100%;
-    padding: 10px;
+    padding: 40px;
     box-sizing: border-box;
     border: 1px solid #ccc;
 }
 
 .send-button {
-    font-size: 1em;
-    width: 100%;
-    margin-top: 0px;
+    margin-top: 10px;
     padding: 8px 16px;
     border: none;
-    border-radius: 50px;
+    border-radius: 5px;
+    font-size: 32px;
     font-weight: bold;
     color: #fff;
     background-color: #EF4342; 
@@ -66,3 +58,5 @@ input[type="text"] {
 .bot {
     color: green;
 }
+
+
