--- a/static/style.css
+++ b/static/style.css
@@ -4,11 +4,19 @@
 }
 
 /* done */
-body {
+html, body {
+  overflow-x: hidden;
+  height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
   background-color: #fff;
+  /* display: flex; */
+}
+
+body {
   display: flex;
+  flex-direction: column;
 }
 
 /* done */
@@ -19,53 +27,72 @@ body {
 
 /* done */
 .main {
+  flex: 1; /* The main area takes up remaining vertical space. */  
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   justify-content: space-between;
-  height: 90vh;
-  width: 100%;
+  /* height: 80vh; */
 }
 
-/* to test */
 .chatbox {
-  width: 90%;
-  height: 400px;
-  overflow: auto;
-  border: 1px solid #fff;
+  flex: 1; /* Allow the chatbox to take up the remaining vertical space. */
+  overflow-y: auto; /* Add a vertical scrollbar when content overflows. */
+  width: 100%;
+  padding: 20px; /* Add padding to create space for conversation. */
   text-align: left;
-  padding: 10px;
 }
 
 /* done */
-.input-container {
-  position: relative;
+.bottom-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 85%;
-  max-width: 650px;
+  border-top: 1px solid #ccc; /* Simplify border definition. */
+  background-color: #ffffff; 
+  z-index: 1; /* Keep it above the chatbox. */
+  position: sticky;
+  bottom: 0; /* Stick to the bottom of the viewport. */
 }
 
-/* done */
+.input-container {
+  margin-top: 5px;
+  display: flex;
+  align-items: center;
+  width: 90%;
+  max-width: 650px;
+  position: sticky;
+  bottom: 0; /* Stick to the bottom of the viewport. */
+  background-color: #fff; /* Ensure the input container is opaque. */
+  z-index: 1; /* Keep it above the chatbox. */
+}
+
 input[type="text"] {
-  position: absolute;
+  flex: 1; /* Allow the input field to grow to fill available space. */
   border: 1px solid #ccc;
   background-color: rgba(255, 255, 255, 0.5);
-  width: 100%;
-  font-size: 20px;
+  font-size: 16px;
   padding: 12px 15px;
   border-radius: 5px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+
+#send {
+  cursor: pointer;
+  position: absolute;
+  right: 0;
+  margin-right: 10px;
+  bottom: 18px;
 }
 
 /* to test */
-.input-container #send {
-  position: absolute;
-  right: 0;
-  bottom: -10px;
-  cursor: pointer;
+.link {
+  color: #858585;
+  font-size: 14px;
+  margin-bottom: 5px;
 }
 
 /* done */
@@ -118,9 +145,3 @@ input:focus {
   border-top-width: thin;
 }
 
-/* to test */
-.link {
-  color: #858585;
-  font-size: 14px; 
-  margin-bottom: 2px;
-}
