--- a/templates/index.html
+++ b/templates/index.html
@@ -8,16 +8,18 @@
     <link rel="stylesheet" type="text/css" href="./static/style.css">
   </head>
 
-  <body>
-    <div class="main">
-        <img src="./static/logo.png" alt="Logo" class="logo">
-        <div class="chatbox" id="chatbox"></div>
-        <div class="input-container">
-            <input type="text" id="message" placeholder="Type your message...">
-            <div id="send">➢</div>
+    <body>
+        <div class="main">
+            <img src="./static/logo.png" alt="Logo" class="logo">
+            <div class="chatbox" id="chatbox"></div>
         </div>
-        <a href="#" class="link">Create your own chatbot powered by ChatGPT</a>
-    </div>
+        <div class="bottom-container">
+            <div class="input-container">
+                <input type="text" id="message" placeholder="Type your message...">
+                <div id="send">➢</div>
+            </div>
+            <a href="#" class="link">Create your own chatbot powered by ChatGPT</a>
+        </div>
 
     <script>
         var userAvatarUrl = "./static/avatar-user-272x272.png";
